서버, 프론트 연결진행중... 사이드바, 카테고리 추가, 단독수정기능 완성
