# backend/src/modules/memo/dtos/cate.dto.ts
@@ -2,7 +2,19 @@ import * as Validator from 'class-validator';
 import { ApiProperty } from '@nestjs/swagger';
 import { CoreOutput } from '../../../common/dtos/coreOutput.dto';
 import { Categories } from '../../../entities/categories.entity';
-import { Type } from 'class-transformer';
+
+export class CateInputDto {
+  @ApiProperty({ type: Number })
+  @Validator.IsNumber()
+  cateId: number;
+
+  @ApiProperty()
+  @Validator.MaxLength(255, {
+    message: '카테고리 제목은 최대 255자 까지 가능합니다.',
+  })
+  @Validator.IsString()
+  cateName: string;
+}
 
 export class CreateCateDto {
   @ApiProperty()
@@ -12,33 +24,25 @@ export class CreateCateDto {
   cateName: string;
 }
 
+export class CateIdInputDto {
+  @ApiProperty({ nullable: true, type: Number })
+  @Validator.IsOptional()
+  @Validator.IsNumber()
+  cateId?: number;
+}
+
 export class CreateCateOutputDto extends CoreOutput {
   @ApiProperty({ type: Categories, required: false })
-  cate?: Categories[];
-}
-
-export class UpdateOneCateInputDto {
-  @ApiProperty()
-  @Validator.MaxLength(255, {
-    message: '카테고리 제목은 최대 255자 까지 가능합니다.',
-  })
-  cateName: string;
-
-  @ApiProperty({ type: Number })
-  cateId: number;
-}
-
-export class IUpdateManyCateInput {
-  @ApiProperty({ type: Number })
-  @Validator.IsNumber()
-  cateId: number;
-
-  @ApiProperty()
-  @Validator.IsString()
-  cateName: string;
-}
-export class UpdateManyCateInputDto {
-  @ApiProperty({ type: [IUpdateManyCateInput] })
   @Validator.IsArray()
-  data: Array<IUpdateManyCateInput>;
+  cate?: Categories[];
+
+  @ApiProperty({ type: CateInputDto })
+  @Validator.IsOptional()
+  savedCate?: CateInputDto;
+}
+
+export class UpdateManyCateInputDto {
+  @ApiProperty({ type: [CateInputDto] })
+  @Validator.IsArray()
+  data: Array<CateInputDto>;
 }
