# backend/src/modules/memo/dtos/memo.dto.ts
@@ -1,7 +1,8 @@
 import * as Validator from 'class-validator';
 import { ApiProperty } from '@nestjs/swagger';
+import { CateIdInputDto } from './cate.dto';
 
-export class CreateMemoInputDto {
+export class CreateMemoInputDto extends CateIdInputDto {
   @ApiProperty()
   @Validator.MaxLength(255, { message: '최대 255자 까지 메모가능합니다.' })
   title: string;
@@ -14,7 +15,7 @@ export class CreateMemoInputDto {
   @Validator.IsBoolean()
   important: boolean;
 
-  @ApiProperty({ type: String, required: false })
+  @ApiProperty({ type: [String], required: false })
   @Validator.IsArray({ message: '잘못된 태그형식입니다.' })
-  tags?: string[];
+  tags?: Array<string>;
 }
